# AI-Demos

./: .env.example  .gitignore  PAPER_TRADING_CHECKLIST.md  README.md  backtest.py  cleanup_polymarket_snapshots.py  collect_polymarket_snapshot.py  config.py  copilot-instructions.md  create_journal.py  cross_market_arbitrage_scanner.ipynb  dashboard.py  data_loader.py  deployment_gate.py  features.py  kalshi_bets_dashboard.py  main.py  maintenance.py  model.py  polymarket_dashboard.py  polymarket_edge.py  pyproject.toml  requirements.txt  server.py  signals.py  threshold_sweep.py  visualization.py  walk_forward.py
journals/: 2026-02-12_journal.md
results/: polymarket_priors_example.csv
